SOLR-18362: stop leaking the token stream and repeating its setup
Five sites closed the supplier's stream only after the loop, so any
mid-loop throw leaked it; four of them repeated the same six-attribute
registration, and QueryWordsTokenStream re-registered per token rather
than per word. The fixes came from epugh running /code-review on this PR.